--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     background-color: hsl(0, 0%, 12%);
     border-radius: 30px;
     padding: 2rem;
+
 }
 
 .header {
@@ -22,8 +23,8 @@ body {
 }
 
 .profile-image {
-    width: 200px;
-    height: 200px;
+    width: 176px;
+    height: 176px;
     border-radius: 50%;
     margin-bottom: 1rem;
 }
@@ -33,21 +34,29 @@ body {
     margin-top: 1rem;
 }
 
+.location {
+    color: hsl(75, 94%, 57%);
+}
+
 .header p:nth-child(2) {
     font-size: 1.2rem;
-    margin-top: 0.5rem;
+    margin-top: 0.10rem;
 }
 
 .nav-item {
     background-color: hsl(0, 0%, 20%);
     color: hsl(0, 0%, 90%);
     text-decoration: none;
-    padding: 0.5rem 1rem;
+    text-align: center;
+    padding: 0.5rem 5rem;
     margin: 0.5rem 0;
     display: block;
+    border-radius: 7px;
     transition: background-color 0.3s ease;
+    cursor: pointer;
 
     &:hover {
-        background-color: hsl(0, 0%, 25%);
+        background-color: hsl(75, 94%, 57%);
+        color: black;
     }
 }
