--- a/style.css
+++ b/style.css
@@ -12,14 +12,18 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: hsl(0, 0%, 12%);
+
     border-radius: 30px;
     padding: 2rem;
 
 }
 
-.header {
+.card-container {
     text-align: center;
+    background-color: hsl(0, 0%, 12%);
+    padding: 30px;
+    border-radius: 10px;
+
 }
 
 .profile-image {
@@ -29,18 +33,22 @@ body {
     margin-bottom: 1rem;
 }
 
-.header h1 {
+ h1 {
     font-size: 2rem;
-    margin-top: 1rem;
+     margin: 2px;
+
+
 }
 
 .location {
     color: hsl(75, 94%, 57%);
+    margin-top: 1px;
 }
 
-.header p:nth-child(2) {
-    font-size: 1.2rem;
-    margin-top: 0.10rem;
+.text {
+   margin: 30px 0 20px 0;
+
+
 }
 
 .nav-item {
@@ -48,12 +56,12 @@ body {
     color: hsl(0, 0%, 90%);
     text-decoration: none;
     text-align: center;
-    padding: 0.5rem 5rem;
+    padding: 0.5rem 7rem;
     margin: 0.5rem 0;
     display: block;
     border-radius: 7px;
     transition: background-color 0.3s ease;
-    cursor: pointer;
+
 
     &:hover {
         background-color: hsl(75, 94%, 57%);
